force-app/main/default/objects/Account/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Apartment</label>
    <referenceTo>Apartment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>