force-app/main/default/objects/Account/fields/fark__c.field-meta.xml
<CustomField>
    <fullName>fark__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>