force-app/main/default/objects/Account/fields/first_opp__c.field-meta.xml
<CustomField>
    <fullName>first_opp__c</fullName>
    <label>first opp</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>