force-app/main/default/objects/Account/fields/goog_alert__Google_Alert_URL__c.field-meta.xml
<CustomField>
    <fullName>goog_alert__Google_Alert_URL__c</fullName>
    <label>Google Alert URL</label>
    <type>Url</type>
</CustomField>