force-app/main/default/objects/Account/fields/MY_Date__c.field-meta.xml
<CustomField>
    <fullName>MY_Date__c</fullName>
    <label>MY Date</label>
    <type>Date</type>
</CustomField>