force-app/main/default/objects/Account/fields/taptaze__c.field-meta.xml
<CustomField>
    <fullName>taptaze__c</fullName>
    <label>taptaze</label>
    <length>50</length>
    <type>Text</type>
</CustomField>