force-app/main/default/objects/Account/fields/Valuable_Company__c.field-meta.xml
<CustomField>
    <fullName>Valuable_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sirketin toplam satın aldığı ürünler 100k ı geçcerse bu alanı isaretle</description>
    <label>Valuable Company</label>
    <type>Checkbox</type>
</CustomField>