force-app/main/default/objects/Account/recordTypes/ozel.recordType-meta.xml
<RecordType>
    <fullName>ozel</fullName>
    <active>true</active>
    <label>ozel</label>
</RecordType>