force-app/main/default/objects/Account/validationRules/current_date.validationRule-meta.xml
<ValidationRule>
    <fullName>current_date</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR( MY_Date__c ) !=  YEAR( TODAY())</errorConditionFormula>
    <errorDisplayField>MY_Date__c</errorDisplayField>
    <errorMessage>güncel yılı gir öküz</errorMessage>
</ValidationRule>